[package]
name = "virtual-balances-garden"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = "0.14.0"
axum = { version = "0.8.3", features = ["macros"] }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = "0.6.2"
